Fixed bug with display collapse indicator.

--- a/source/stylesheets/pages/_pricing.scss
+++ b/source/stylesheets/pages/_pricing.scss
@@ -225,12 +225,19 @@ body.pricing .content {
       cursor: pointer;
       background-color: white;
 
-      h4 {
+      .panel-title {
         font-size: 20px;
-      }
+        font-weight: 500;
 
-      a {
-        text-decoration: underline;
+        a {
+          display: inline-block;
+          width: 95%;
+        }
+
+        i {
+          width: 5%;
+          position: inherit;
+        }
       }
     }
 
